# oort-sdk-c

./: CMakeLists.txt  README.md
.openapi-generator/: FILES
api/: SdkAPI.c  SdkAPI.h
docs/: SdkAPI.md  adcs_command_request.md  adcs_command_response.md  adcs_euler_t.md  adcs_hk.md  adcs_quat_t.md  adcs_response.md  adcs_target.md  adcs_xyz_float_t.md  available_files_response.md  delivery_hints.md  error_response.md  file_info.md  retrieve_file_request.md  send_file_request.md  send_file_response.md  send_options.md  tfrs_response.md  ttl_params.md
include/: apiClient.h
model/: adcs_command_request.c  adcs_command_request.h  adcs_command_response.c  adcs_command_response.h  adcs_euler_t.c  adcs_euler_t.h  adcs_hk.c  adcs_hk.h  adcs_quat_t.c  adcs_quat_t.h  adcs_response.c  adcs_response.h  adcs_target.c  adcs_target.h  adcs_xyz_float_t.c  adcs_xyz_float_t.h  available_files_response.c  available_files_response.h  delivery_hints.c  delivery_hints.h  error_response.c  error_response.h  file_info.c  file_info.h  retrieve_file_request.c  retrieve_file_request.h  send_file_request.c  send_file_request.h  send_file_response.c  send_file_response.h  send_options.c  send_options.h  tags.c  tags.h  tfrs_response.c  tfrs_response.h  ttl_params.c  ttl_params.h
src/: apiClient.c
unit-test/: test_adcs_command_request.c  test_adcs_command_response.c  test_adcs_euler_t.c  test_adcs_hk.c  test_adcs_quat_t.c  test_adcs_response.c  test_adcs_target.c  test_adcs_xyz_float_t.c  test_available_files_response.c  test_delivery_hints.c  test_error_response.c  test_file_info.c  test_retrieve_file_request.c  test_send_file_request.c  test_send_file_response.c  test_send_options.c  test_tfrs_response.c  test_ttl_params.c
